fix: name and description readme

--- a/index.html
+++ b/index.html
@@ -25,10 +25,10 @@
         justify-content: center;
         align-items: center;
         height: 100vh;
-        background-color: var(--primary); /* Iniciar com a cor padrão */
+        background-color: var(--primary);
         font-family: Arial, sans-serif;
         color: white;
-        transition: background-color 0.5s ease; /* Transição suave para mudar a cor do fundo */
+        transition: background-color 0.5s ease;
       }
 
       .container {
@@ -36,7 +36,7 @@
         width: 100%;
         max-width: 600px;
         margin: 0 20px;
-        display: none; /* Inicialmente oculto */
+        display: none;
         flex-direction: column;
         align-items: center;
         justify-content: center;
