--- a/index.html
+++ b/index.html
@@ -5,7 +5,7 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Site de Casamento</title>
 
-    <link rel="stylesheet" href="../../global.css" />
+    <link rel="stylesheet" href="./global.css" />
     <link rel="stylesheet" href="styles.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
@@ -30,11 +30,17 @@
         <span>14 DE JUNHO DE 2025 | 16H00</span>
       </div>
 
-      <a href="../Presentes/index.html" class="button" id="goToPresentesButton">
+      <a
+        href="./pages/Presentes/index.html"
+        class="button"
+        id="goToPresentesButton"
+      >
         Lista de Presentes
       </a>
-      <a href="../Presenca/index.html" class="button">Confirmar Presença</a>
-      <a href="../Localizacao/index.html" class="button">Localização</a>
+      <a href="./pages/Presenca/index.html" class="button">
+        Confirmar Presença
+      </a>
+      <a href="./pages/Localizacao/index.html" class="button">Localização</a>
 
       <div class="title">
         <div class="separator"></div>
@@ -52,17 +58,17 @@
     </div>
 
     <audio id="backgroundMusic" loop>
-      <source src="../../assets/music/music.mp3" type="audio/mp3" />
+      <source src="./assets/music/music.mp3" type="audio/mp3" />
       Seu navegador não suporta o elemento de áudio.
     </audio>
 
     <img
-      src="../../assets/images/flor02.webp"
+      src="./assets/images/flor02.webp"
       alt="Flor decorativa"
       class="background-flower background-flower-top"
     />
     <img
-      src="../../assets/images/flor02.webp"
+      src="./assets/images/flor02.webp"
       alt="Flor decorativa"
       class="background-flower background-flower-bottom"
     />
