--- a/index.html
+++ b/index.html
@@ -14,6 +14,12 @@
       href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap"
       rel="stylesheet"
     />
+
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
+
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.10.0/lottie.min.js"></script>
   </head>
   <body>
@@ -27,7 +33,7 @@
       <div class="title">
         <h1>Bem-vindo ao convite de</h1>
         <h2>Ana e Murilo</h2>
-        <span>14 DE JUNHO DE 2025 | 16H00</span>
+        <span>14 DE JUNHO DE 2025</span>
       </div>
 
       <a
@@ -37,6 +43,7 @@
       >
         Lista de Presentes
       </a>
+      <a href="./pages/Temas/index.html" class="button">Temas e cores</a>
       <a href="./pages/Presenca/index.html" class="button">
         Confirmar Presença
       </a>
@@ -44,16 +51,12 @@
 
       <div class="title">
         <div class="separator"></div>
-        <p>A música de fundo faz parte da experiência</p>
+        <p class="title-music">A música de fundo faz parte da experiência</p>
       </div>
 
       <div class="centralize-small-button">
-        <a href="#" class="small-button" id="playMusicButton">
-          Entrar com música
-        </a>
-        <a href="#" class="small-button" id="stopMusicButton">
-          Entrar sem música
-        </a>
+        <a href="#" class="small-button" id="playMusicButton">Com música</a>
+        <a href="#" class="small-button" id="stopMusicButton">Sem música</a>
       </div>
     </div>
 
