--- a/pages/Presenca/index.html
+++ b/pages/Presenca/index.html
@@ -21,22 +21,9 @@
       />
       <h1 class="main-title">Confirmação de Presença</h1>
 
-      <form class="presence-form" id="presenceForm">
-        <div class="form-group">
-          <label for="name">Nome</label>
-          <input type="text" id="name" name="name" required />
-        </div>
-        <div class="form-group">
-          <label for="presence">Vai Comparecer?</label>
-          <select id="presence" name="presence" required>
-            <option value="sim">Sim</option>
-            <option value="nao">Não</option>
-          </select>
-        </div>
-        <button type="submit">Confirmar Presença</button>
-      </form>
-
-      <div class="confirmation-message" id="confirmationMessage"></div>
+      <button class="confirm-button" onclick="redirectToWhatsApp()">
+        Confirmar Presença
+      </button>
 
       <div class="gift-list-footer">
         <p>Obrigado pelo carinho e presença!</p>
@@ -49,24 +36,14 @@
     </audio>
 
     <script>
-      const form = document.getElementById("presenceForm")
-      const confirmationMessage = document.getElementById("confirmationMessage")
-
-      form.addEventListener("submit", function (event) {
-        event.preventDefault()
-
-        const name = document.getElementById("name").value
-        const presence = document.getElementById("presence").value
-
-        confirmationMessage.innerHTML = `
-          <h3>Obrigado, ${name}!</h3>
-          <p>Sua confirmação foi registrada. Você optou por ${
-            presence === "sim" ? "comparecer" : "não comparecer"
-          } ao evento.</p>
-        `
-
-        form.reset()
-      })
+      function redirectToWhatsApp() {
+        const phone = "+5518997875551"
+        const message = encodeURIComponent(
+          "Eu confirmo minha presença no seu casamento. Estou muito feliz em poder celebrar esse momento especial com vocês!"
+        )
+        const whatsappURL = `https://wa.me/${phone}?text=${message}`
+        window.location.href = whatsappURL
+      }
     </script>
   </body>
 </html>
