--- a/pages/Presenca/index.html
+++ b/pages/Presenca/index.html
@@ -21,6 +21,13 @@
       />
       <h1 class="main-title">Confirmação de Presença</h1>
 
+      <input
+        type="text"
+        id="nameInput"
+        class="name-input"
+        placeholder="Digite seu nome"
+      />
+
       <button class="confirm-button" onclick="redirectToWhatsApp()">
         Confirmar Presença
       </button>
@@ -38,8 +45,22 @@
     <script>
       function redirectToWhatsApp() {
         const phone = "+5518997875551"
+        const nameInput = document.getElementById("nameInput")
+        let name = nameInput.value.trim()
+
+        if (!name) {
+          alert("Por favor, digite seu nome antes de confirmar.")
+          return
+        }
+
+        name = name
+          .toLowerCase()
+          .split(" ")
+          .map((word) => word.charAt(0).toUpperCase() + word.slice(1))
+          .join(" ")
+
         const message = encodeURIComponent(
-          "Eu confirmo minha presença no seu casamento. Estou muito feliz em poder celebrar esse momento especial com vocês!"
+          `Eu, ${name}, confirmo minha presença no seu casamento.`
         )
         const whatsappURL = `https://wa.me/${phone}?text=${message}`
         window.location.href = whatsappURL
