feature: new functions and structure

--- a/index.html
+++ b/index.html
@@ -5,8 +5,8 @@
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Site de Casamento</title>
 
-    <link rel="stylesheet" href="./global.css" />
-    <link rel="stylesheet" href="styles.css" />
+    <link rel="stylesheet" href="./css/global.css" />
+    <link rel="stylesheet" href="./css/home.css" />
 
     <link rel="preconnect" href="https://fonts.googleapis.com" />
     <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
@@ -36,17 +36,11 @@
         <span>14 DE JUNHO DE 2025</span>
       </div>
 
-      <a
-        href="./pages/Presentes/index.html"
-        class="button"
-        id="goToPresentesButton"
-      >
+      <a href="./presentes.html" class="button" id="goToPresentesButton">
         Lista de Presentes
       </a>
-      <a href="./pages/Presenca/index.html" class="button">
-        Confirmar Presença
-      </a>
-      <a href="./pages/Localizacao/index.html" class="button">Localização</a>
+      <a href="./presenca.html" class="button">Confirmar Presença</a>
+      <a href="./localizacao.html" class="button">Localização</a>
 
       <div class="title">
         <div class="separator"></div>
@@ -75,6 +69,6 @@
       class="background-flower background-flower-bottom"
     />
 
-    <script src="script.js"></script>
+    <script src="./js/home.js"></script>
   </body>
 </html>
