--- a/presenca.html
+++ b/presenca.html
@@ -4,22 +4,35 @@
     <meta charset="UTF-8" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Confirmar Presença</title>
-    <link rel="stylesheet" href="styles.css" />
-    <link rel="stylesheet" href="../../global.css" />
+    <link rel="stylesheet" href="./css/presenca.css" />
+    <link rel="stylesheet" href="./css/global.css" />
+    <link
+      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
+      rel="stylesheet"
+    />
   </head>
   <body>
     <div class="presence-confirmation-container">
       <img
-        src="../../assets/images/flor02.webp"
+        src="./assets/images/flor02.webp"
         alt="Flor decorativa"
         class="background-flower"
       />
       <img
-        src="../../assets/images/flor02.webp"
+        src="./assets/images/flor02.webp"
         alt="Flor decorativa esquerda"
         class="background-flower-left"
       />
-      <h1 class="main-title">Confirmação de Presença</h1>
+
+      <div class="title">
+        <h2>Confirmação de Presença</h2>
+
+        <p>
+          É uma alegria imensa compartilhar esse momento tão especial com você!
+          Para organizarmos tudo com carinho e garantir que sua presença seja
+          recebida da melhor forma, pedimos que confirme sua presença
+        </p>
+      </div>
 
       <input
         type="text"
@@ -38,7 +51,7 @@
     </div>
 
     <audio id="backgroundMusic" loop>
-      <source src="../../assets/music/music.mp3" type="audio/mp3" />
+      <source src="./assets/music/music.mp3" type="audio/mp3" />
       Seu navegador não suporta o elemento de áudio.
     </audio>
 
