feature: new archive

--- a/index.html
+++ b/index.html
@@ -8,67 +8,28 @@
     <link rel="stylesheet" href="./css/global.css" />
     <link rel="stylesheet" href="./css/home.css" />
 
-    <link rel="preconnect" href="https://fonts.googleapis.com" />
-    <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Pinyon+Script&display=swap"
-      rel="stylesheet"
-    />
-
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
-
     <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.10.0/lottie.min.js"></script>
   </head>
+
   <body>
     <div id="lottie-container"></div>
 
-    <div
-      class="container"
-      id="main-content"
-      style="display: none; flex-direction: column"
-    >
-      <div class="title">
-        <h1>Bem-vindo ao convite de</h1>
-        <h2>Ana e Murilo</h2>
-        <span>14 DE JUNHO DE 2025</span>
-      </div>
+    <script src="https://cdnjs.cloudflare.com/ajax/libs/lottie-web/5.10.0/lottie.min.js"></script>
 
-      <a href="./presentes.html" class="button" id="goToPresentesButton">
-        Lista de Presentes
-      </a>
-      <a href="./presenca.html" class="button">Confirmar Presença</a>
-      <a href="./localizacao.html" class="button">Localização</a>
+    <script>
+      const lottieContainer = document.getElementById("lottie-container")
 
-      <div class="title">
-        <div class="separator"></div>
-        <p class="title-music">A música de fundo faz parte da experiência</p>
-      </div>
+      const animation = lottie.loadAnimation({
+        container: lottieContainer,
+        renderer: "svg",
+        loop: false,
+        autoplay: true,
+        path: "./assets/lotties/heart.json",
+      })
 
-      <div class="centralize-small-button">
-        <a href="#" class="small-button" id="playMusicButton">Com música</a>
-        <a href="#" class="small-button" id="stopMusicButton">Sem música</a>
-      </div>
-    </div>
-
-    <audio id="backgroundMusic" loop>
-      <source src="./assets/music/music.mp3" type="audio/mp3" />
-      Seu navegador não suporta o elemento de áudio.
-    </audio>
-
-    <img
-      src="./assets/images/flor02.webp"
-      alt="Flor decorativa"
-      class="background-flower background-flower-top"
-    />
-    <img
-      src="./assets/images/flor02.webp"
-      alt="Flor decorativa"
-      class="background-flower background-flower-bottom"
-    />
-
-    <script src="./js/home.js"></script>
+      animation.addEventListener("complete", function () {
+        window.location.href = "home.html"
+      })
+    </script>
   </body>
 </html>
