feature: finish layout

--- a/home.html
+++ b/home.html
@@ -28,7 +28,7 @@
       <div class="title">
         <h1>Bem-vindo ao convite de</h1>
         <h2>Ana e Murilo</h2>
-        <span>14 DE JUNHO DE 2025</span>
+        <span>23 DE AGOSTO DE 2025</span>
       </div>
 
       <a href="./presentes.html" class="button" id="goToPresentesButton">
@@ -39,7 +39,7 @@
 
       <div class="title">
         <div class="separator"></div>
-        <p class="title-music">A música de fundo faz parte da experiência</p>
+        <p class="title-music">A música de fundo faz parte da experiência.</p>
       </div>
 
       <div class="centralize-small-button">
@@ -64,6 +64,6 @@
       class="background-flower background-flower-bottom"
     />
 
-    <script src="./js/home.js"></script>
+    <script src="./js/home.js" defer></script>
   </body>
 </html>
