--- a/presenca.html
+++ b/presenca.html
@@ -12,6 +12,8 @@
     />
   </head>
   <body>
+    <a href="home.html" class="back-arrow">&#8592; Voltar</a>
+
     <div class="presence-confirmation-container">
       <img
         src="./assets/images/flor02.webp"
@@ -45,15 +47,15 @@
         Confirmar Presença
       </button>
 
-      <div class="gift-list-footer">
-        <p>Obrigado pelo carinho e presença!</p>
-      </div>
+     
     </div>
 
     <audio id="backgroundMusic" loop>
       <source src="./assets/music/music.mp3" type="audio/mp3" />
       Seu navegador não suporta o elemento de áudio.
     </audio>
+
+    <script src="./js/home.js"></script>
 
     <script>
       function redirectToWhatsApp() {
