--- a/localizacao.html
+++ b/localizacao.html
@@ -16,6 +16,8 @@
     />
   </head>
   <body>
+    <a href="home.html" class="back-arrow">&#8592; Voltar</a>
+
     <div class="location-container">
       <img
         src="./assets/images/flor02.webp"
@@ -60,6 +62,8 @@
       <source src="./assets/music/music.mp3" type="audio/mp3" />
       Seu navegador não suporta o elemento de áudio.
     </audio>
+
+    <script src="./js/home.js"></script>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
