--- a/presentes.html
+++ b/presentes.html
@@ -12,6 +12,8 @@
     />
   </head>
   <body>
+    <a href="home.html" class="back-arrow">&#8592; Voltar</a>
+
     <div class="gift-list-container">
       <img
         src="./assets/images/flor02.webp"
