--- a/presenca.html
+++ b/presenca.html
@@ -46,8 +46,6 @@
       <button class="confirm-button" onclick="redirectToWhatsApp()">
         Confirmar Presença
       </button>
-
-     
     </div>
 
     <audio id="backgroundMusic" loop>
@@ -55,7 +53,7 @@
       Seu navegador não suporta o elemento de áudio.
     </audio>
 
-    <script src="./js/home.js"></script>
+    <script src="./js/music.js" defer></script>
 
     <script>
       function redirectToWhatsApp() {
