--- a/presentes.html
+++ b/presentes.html
@@ -50,7 +50,7 @@
       Seu navegador não suporta o elemento de áudio.
     </audio>
 
-    <script src="./js/home.js"></script>
+    <script src="./js/music.js" defer></script>
 
     <script>
       const produtos = [
