--- a/localizacao.html
+++ b/localizacao.html
@@ -63,7 +63,7 @@
       Seu navegador não suporta o elemento de áudio.
     </audio>
 
-    <script src="./js/home.js"></script>
+    <script src="./js/music.js" defer></script>
 
     <script src="https://unpkg.com/leaflet@1.7.1/dist/leaflet.js"></script>
     <script>
