--- a/presenca.html
+++ b/presenca.html
@@ -1,83 +1,35 @@
-<!DOCTYPE html>
-<html lang="pt-BR">
-  <head>
-    <meta charset="UTF-8" />
-    <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>Confirmar Presença</title>
-    <link rel="stylesheet" href="./css/presenca.css" />
-    <link rel="stylesheet" href="./css/global.css" />
-    <link
-      href="https://fonts.googleapis.com/css2?family=Quicksand:wght@300..700&display=swap"
-      rel="stylesheet"
-    />
-  </head>
-  <body>
-    <a href="home.html" class="back-arrow">&#8592; Voltar</a>
+<div class="presence-container">
+  <a
+    href="javascript:void(0);"
+    class="back-arrow"
+    onclick="changeContent('home')"
+  >
+    &#8592; Voltar
+  </a>
+  <img
+    src="./assets/images/flor02.webp"
+    alt="Flor decorativa"
+    class="presence-image-flower"
+  />
+  <img
+    src="./assets/images/flor02.webp"
+    alt="Flor decorativa esquerda"
+    class="presence-image-flower-left"
+  />
 
-    <div class="presence-confirmation-container">
-      <img
-        src="./assets/images/flor02.webp"
-        alt="Flor decorativa"
-        class="background-flower"
-      />
-      <img
-        src="./assets/images/flor02.webp"
-        alt="Flor decorativa esquerda"
-        class="background-flower-left"
-      />
+  <div class="title">
+    <h2>Confirmação de Presença</h2>
 
-      <div class="title">
-        <h2>Confirmação de Presença</h2>
+    <p>
+      É uma alegria imensa compartilhar esse momento tão especial com você! Para
+      organizarmos tudo com carinho e garantir que sua presença seja recebida da
+      melhor forma, pedimos que confirme sua presença
+    </p>
+  </div>
 
-        <p>
-          É uma alegria imensa compartilhar esse momento tão especial com você!
-          Para organizarmos tudo com carinho e garantir que sua presença seja
-          recebida da melhor forma, pedimos que confirme sua presença
-        </p>
-      </div>
+  <input type="text" id="nameInput" placeholder="Digite seu nome" />
 
-      <input
-        type="text"
-        id="nameInput"
-        class="name-input"
-        placeholder="Digite seu nome"
-      />
-
-      <button class="confirm-button" onclick="redirectToWhatsApp()">
-        Confirmar Presença
-      </button>
-    </div>
-
-    <audio id="backgroundMusic" loop>
-      <source src="./assets/music/music.mp3" type="audio/mp3" />
-      Seu navegador não suporta o elemento de áudio.
-    </audio>
-
-    <script src="./js/music.js" defer></script>
-
-    <script>
-      function redirectToWhatsApp() {
-        const phone = "+5518997875551"
-        const nameInput = document.getElementById("nameInput")
-        let name = nameInput.value.trim()
-
-        if (!name) {
-          alert("Por favor, digite seu nome antes de confirmar.")
-          return
-        }
-
-        name = name
-          .toLowerCase()
-          .split(" ")
-          .map((word) => word.charAt(0).toUpperCase() + word.slice(1))
-          .join(" ")
-
-        const message = encodeURIComponent(
-          `Eu, ${name}, confirmo minha presença no seu casamento.`
-        )
-        const whatsappURL = `https://wa.me/${phone}?text=${message}`
-        window.location.href = whatsappURL
-      }
-    </script>
-  </body>
-</html>
+  <button class="small-button" onclick="redirectToWhatsApp()">
+    Confirmar Presença
+  </button>
+</div>
