--- a/home.html
+++ b/home.html
@@ -21,11 +21,7 @@
     <link rel="icon" href="./assets/images/icon.png" type="image/x-icon" />
   </head>
   <body>
-    <div
-      class="container"
-      id="main-content"
-      style="display: flex; flex-direction: column"
-    >
+    <div id="main-content" style="display: flex; flex-direction: column">
       <div id="home">
         <div class="title">
           <h1>Bem-vindo ao convite de</h1>
