feature: new layout

--- a/localizacao.html
+++ b/localizacao.html
@@ -1,4 +1,4 @@
-<div class="location-container">
+<div class="presence-container">
   <a
     href="javascript:void(0);"
     class="back-arrow"
@@ -6,7 +6,6 @@
   >
     &#8592; Voltar
   </a>
-
   <img
     src="./assets/images/flor02.webp"
     alt="Flor decorativa"
@@ -26,7 +25,6 @@
       local do evento.
     </p>
   </div>
-
   <div class="map-image">
     <a
       href="https://www.google.com/maps?q=-21.46849607932378,-51.50088985976688"
