--- a/presentes.html
+++ b/presentes.html
@@ -22,10 +22,9 @@
     <div class="title">
       <h2>Lista de Presentes</h2>
       <p>
-        Em parceria com as lojas Brink Lar e Novolar, preparamos esta lista de
-        sugestões para facilitar sua escolha. Mas, acima de tudo, sinta-se à
-        vontade para presentear com o que o seu coração indicar – o gesto de
-        carinho é o que mais importa!
+        Nossa lista de presentes está disponível nas lojas físicas BrinkLar e
+        Novolar. Para mais comodidade, você também pode fazer sua compra online
+        através da nossa lista de presentes
       </p>
     </div>
 
