feature: new layout

--- a/presentes.html
+++ b/presentes.html
@@ -21,10 +21,20 @@
 
     <div class="title">
       <h2>Lista de Presentes</h2>
-      <p>
-        Nossa lista de presentes está disponível nas lojas físicas BrinkLar e
-        Novolar. Para mais comodidade, você também pode fazer sua compra online
-        através da nossa lista de presentes
+      <p style="text-align: center">
+        Nossa lista de presentes está disponível nas seguintes lojas físicas:
+      </p>
+
+      <p style="text-align: left; font-weight: 400">
+        - 1001 Variedade (itens de cozinha, cama e banho)
+        <br />
+        - Novolar (itens de cama e banho)
+        <br />
+      </p>
+
+      <p style="text-align: center">
+        Para sua maior comodidade, também é possível comprar online através da
+        nossa lista de presentes. Confira abaixo:
       </p>
     </div>
 
