feature: aninha fica olhando cada detalhe e pedindo pra eu alterar, entao vai mais um commit

--- a/presentes.html
+++ b/presentes.html
@@ -26,7 +26,7 @@
       </p>
 
       <p style="text-align: left; font-weight: 400">
-        - 1001 Variedade (itens de cozinha, cama e banho)
+        - 1001 Variedades (itens de cozinha, cama e banho)
         <br />
         - Novolar (itens de cama e banho)
         <br />
