feature: new products mercado pago

--- a/localizacao.html
+++ b/localizacao.html
@@ -1,4 +1,4 @@
-<div class="presence-container">
+<div class="localition-container">
   <a
     href="javascript:void(0);"
     class="back-arrow"
@@ -36,6 +36,16 @@
         alt="Imagem do local do evento"
         class="location-map-image"
       />
+    </a>
+  </div>
+
+  <div class="map-button-container">
+    <a
+      href="https://www.google.com/maps?q=-21.468227212470158,-51.50110198481022"
+      target="_blank"
+      class="map-button"
+    >
+      📍 Abrir no Google Maps
     </a>
   </div>
 
