fix: bug vercel

--- a/home.html
+++ b/home.html
@@ -80,7 +80,7 @@
 
     <audio id="backgroundMusic" loop>
       <source src="./assets/music/music.mp3" type="audio/mp3" />
-      Seu navegador não suporta o elemento de áudio.
+      Seu navegador não suporta o elemento de áudio!.
     </audio>
 
     <script src="./js/music.js" defer></script>
