feature: new title store

--- a/presentes.html
+++ b/presentes.html
@@ -25,7 +25,9 @@
         Nossa lista de presentes está disponível nas seguintes lojas físicas:
       </p>
 
-      <p style="text-align: left; font-weight: 400">
+      <p
+        style="text-align: left; font-weight: 400; color: red; font-size: 19px"
+      >
         - 1001 Variedades (itens de cozinha, cama e banho)
         <br />
         - Novolar (itens de cama e banho)
